# mappedfile

./: .clang-format  CMakeLists.txt  README.md  decodeless_mappedfile-config.cmake
.github/workflows/: build_and_test.yml
include/decodeless/: mappedfile.hpp
include/decodeless/detail/: mappedfile_common.hpp  mappedfile_linux.hpp  mappedfile_windows.hpp
test/: CMakeLists.txt  glibcxx_debug_backtrace.cmake
test/src/: mappedfile.cpp
